--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
     <header>
         <nav>
-            <img src="/images/logo.svg" />
+            <img src="./images/logo.svg" />
             <ul id="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Services</a></li>
