--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="banner">    
             <div class="banner-left-column">
                 <div class="banner-left-items">
-                    <img src="/images/star.svg">Trustpilot ⭐⭐⭐⭐⭐ 4900+ 5 stars                
+                    <img src="./images/star.svg">Trustpilot ⭐⭐⭐⭐⭐ 4900+ 5 stars                
                     <h1>Learning <span class="blue-wrap">experiences</span> made easy, social and interactive</h1>
                     <p>Millions of companies of all sizes—from startups to Fortune 500s—use Stripe’s software & APIs to accept payments, send payouts</p>
                     <ul class="email-stuff">
@@ -34,15 +34,15 @@
                 </div>
             </div>
             <div class="banner-right-colum">
-                <img src="/images/banner-frame1.svg">
+                <img src="./images/banner-frame1.svg">
             </div>
         </section>
         <section id="companies">
-            <img src="/images/spotify.svg" alt="">
-            <img src="/images/slack.svg" alt="">
-            <img src="/images/dropbox.svg" alt="">
-            <img src="/images/webflow.svg" alt="">
-            <img src="images/zoom.svg" alt="">
+            <img src="./images/spotify.svg" alt="">
+            <img src="./images/slack.svg" alt="">
+            <img src="./images/dropbox.svg" alt="">
+            <img src="./images/webflow.svg" alt="">
+            <img src="./images/zoom.svg" alt="">
         </section>
     </header>
     <main>
